# docshokage

./: LICENSE  README.md  pyproject.toml
docshokage/: __init__.py  cli.py  filter.py  scanner.py  sender.py
docshokage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
